fix nesting error in faqcollapse.scss

--- a/react-components/src/components/FAQCollapse.scss
+++ b/react-components/src/components/FAQCollapse.scss
@@ -104,7 +104,7 @@
 .faq.active {
   .faq-toggle {
     .down-arrow {
-      display: block;
+      display: none;
     }
   }
 }
